# league-client

./: Cargo.toml  LICENSE  README.md
examples/: connect_to_client.rs  subscribe.rs
src/: client.rs  connector.rs  core.rs  lib.rs
src/core/: message.rs
