[package]
name = "league-client"
version = "0.1.1"
edition = "2021"
authors = ["Colt Robertson <colt.robertson86@gmail.com>"]
repository = "https://github.com/coltiebaby/league-client"
readme = "README.md"
description = "Connect to your league of legends client"
license = "MIT"
keywords = ["lol", "lcu", "client-api"]

[dependencies]
base64 = "0.22.0"
flume = "0.11.0"
futures-util = "0.3.30"
native-tls = "0.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
thiserror = { version = "1" }
tungstenite = { version = "0.21.0" }
tokio-tungstenite = { version = "0.21.0" }
regex = {version = "1" }
reqwest = { version = "0.11.25", features = ["stream"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
